# Ceres

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  cliff.toml  clippy.toml  compose.yml  deny.toml  lib.rs  main.rs
.cargo/: audit.toml
.claude/skills/ceres/: SKILL.md
.claude/skills/ceres-publish-dataset/: SKILL.md
.claude/skills/ceres/references/: architecture.md  cli-and-server.md  contributing.md  extending.md  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: blank_issue.md
.github/workflows/: ci.yml  pages.yml  prepare-release.yml  release.yml
crates/ceres-cli/: Cargo.toml  README.md  build.rs
crates/ceres-cli/src/: config.rs  lib.rs  main.rs
crates/ceres-client/: Cargo.toml  README.md
crates/ceres-client/src/: arcgis.rs  ckan.rs  datajson.rs  dcat.rs  gemini.rs  lib.rs  ogc_records.rs  ollama.rs  openai.rs  opendatasoft.rs  portal.rs  provider.rs  socrata.rs  sparql.rs  stac.rs
crates/ceres-client/tests/fixtures/: arcgis_items.json  ckan_package_search.json  csw_get_records.xml  dcat_udata_catalog.jsonld  opendatasoft_catalog.json  project_open_data.json  socrata_catalog.json  sparql_results.json  stac_collections_1_0.json  stac_collections_1_1.json
crates/ceres-core/: Cargo.toml  README.md
crates/ceres-core/src/: circuit_breaker.rs  config.rs  embedding.rs  error.rs  export.rs  harvest.rs  i18n.rs  job.rs  job_queue.rs  lib.rs  models.rs  parquet_export.rs  pipeline.rs  progress.rs  schema.rs  search.rs  sync.rs  traits.rs  worker.rs
crates/ceres-core/tests/: integration.rs
crates/ceres-db/: Cargo.toml  README.md
crates/ceres-db/src/: job_repository.rs  lib.rs  repository.rs
crates/ceres-db/tests/: integration.rs
crates/ceres-server/: Cargo.toml  README.md
crates/ceres-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  router.rs  state.rs
crates/ceres-server/src/dto/: mod.rs  request.rs  response.rs
crates/ceres-server/src/handlers/: datasets.rs  export.rs  harvest.rs  health.rs  mod.rs  portals.rs  search.rs  stats.rs
crates/ceres-server/tests/: integration.rs
crates/ceres-server/tests/integration/: common.rs  handler_tests.rs
docs/: CHANGELOG.md  CONTRIBUTING.md  COST.md  HARVESTING.md  SECURITY.md  index.html
examples/: PORTAL_CURATION_2026-07.md  portals.toml
migrations/: 202511290001_init.sql  202512210001_add_content_hash.sql  202601060001_portal_sync_status.sql  202601110001_add_sync_status.sql  202601150001_harvest_jobs.sql  202602050001_embedding_config.sql  202602080001_add_url_template_to_harvest_jobs.sql  202602100001_add_language_to_harvest_jobs.sql  202603040001_add_is_stale.sql  202603270001_add_portal_type_to_harvest_jobs.sql  202604120001_add_profile_to_harvest_jobs.sql  202605210001_hnsw_tuning.sql  202607120001_add_record_kind.sql  202607140001_add_stac_portal_type.sql
scripts/: hnsw_benchmark.sql
src/: error.rs  lib.rs  main.rs  models.rs
src/clients/: ckan.rs  mod.rs  openai.rs
src/storage/: pg.rs
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: FeatureGrid.astro  Terminal.astro
website/src/styles/: custom.css
(+15 files in other folders)
