[package]
name = "ceres-search"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Ceres semantic search engine"
keywords = ["ckan", "semantic-search", "cli", "open-data"]
categories = ["command-line-utilities"]

[[bin]]
name = "ceres"
path = "src/main.rs"

[dependencies]
# Internal crates
ceres-core.workspace = true
ceres-client.workspace = true
ceres-db.workspace = true

# CLI
clap.workspace = true
dotenvy.workspace = true

# Serialization
serde_json.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true

# Database
sqlx.workspace = true
pgvector.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Configuration paths
dirs.workspace = true
once_cell = "1.21.3"

[build-dependencies]
# vergen = { version = "9.0.0", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
