[package]
name = "ceres-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP clients for CKAN portals and Gemini embeddings API"
keywords = ["ckan", "gemini", "embeddings", "http-client"]
categories = ["web-programming::http-client"]

[dependencies]
# Internal
ceres-core.workspace = true

# Error handling
anyhow.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Domain types
url.workspace = true

# Async
tokio.workspace = true

# Date/time
chrono.workspace = true
